# bir-ph-jmit

./: .gitignore  CHANGELOG.md  COMPLETION_REPORT.md  FILE_STRUCTURE.md  FRAPPE_CLOUD_DEPLOYMENT.md  GIT_COMMIT_GUIDE.md  INSTALLATION_GUIDE.md  LICENSE  MANIFEST.in  PROJECT_SUMMARY.md  QUICK_START.md  README.md  hooks.py  pyproject.toml  setup-git.bat  setup-git.ps1  setup-git.sh  setup.py  verify_app.py
bir_ph_jmit/: .frapperc  __init__.py  build.json  config.py  desk.py  esbuild.config.js  hooks.py  install.py  package.json  tasks.py
bir_ph_jmit/modules/: __init__.py
bir_ph_jmit/modules/BIRReports/: __init__.py  module_def.json
bir_ph_jmit/modules/BIRReports/api/: __init__.py  utils.py
bir_ph_jmit/modules/BIRReports/doctype/: __init__.py
bir_ph_jmit/modules/BIRReports/report/: __init__.py  creditable_withholding_tax.py  expanded_withholding_tax.py  final_withholding_tax.py  income_tax_withholding.py  monthly_tax_compliance.py  purchase_register.py  sales_register.py  summary_sales_purchases_cwt.py  vat_reconciliation.py
bir_ph_jmit/public/: .gitignore
bir_ph_jmit/public/css/: bir_ph_jmit.css
bir_ph_jmit/public/js/: bir_ph_jmit.js
