[build-system]
requires = ["setuptools>=40.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bir-ph-jmit"
version = "1.0.0"
description = "Standard Bureau of Internal Revenue (BIR) Philippines Reports for ERPNext v15 CAS Application"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "JMIT", email = "support@jmit.ph"},
]
keywords = ["frappe", "erpnext", "bir", "philippines", "reports", "accounting", "cas"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Frappe",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
    "frappe>=14.0",
    "erpnext>=15.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/bir-ph-jmit"
Repository = "https://github.com/yourusername/bir-ph-jmit.git"
"Bug Tracker" = "https://github.com/yourusername/bir-ph-jmit/issues"
